--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,6 @@
     <title>Contact us</title>
 </head>
 <body>
-    Modified first time push hoga
+    Modified first time push hoga, modifed from server
 </body>
 </html>
